layout issues 7

--- a/client/src/Escape/Play.css
+++ b/client/src/Escape/Play.css
@@ -556,7 +556,7 @@ p{
         left: 0;
         bottom: 0;
         width: 100%;
-        height: 15%;
+        height: 17%;
         overflow: hidden;
         position: fixed;
     }
@@ -579,14 +579,16 @@ p{
         text-align: left;
         padding-left: 50px;
         font-size: 18px;
+        padding-top: 10px;
     }
     #inventoryItems {
         text-align: left;
         padding-left: 50px;
         font-size: 17px;
+        padding-bottom: 5px;
     }
     .room {
-        margin-bottom: 15%;
+        margin-bottom: 17%;
     }
 
   }
